--- a/src/week2/style.css
+++ b/src/week2/style.css
@@ -3,6 +3,10 @@
   word-break: keep-all;
 }
 
+body {
+  background-color: #d1d1d1;
+}
+
 button {
   border: 0;
   background-color: transparent;
@@ -30,6 +34,75 @@ main {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
+}
+
+.main-container {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  margin: 3.125rem auto;
+  inline-size: 38.0625rem;
+  background-color: #fff;
+}
+
+.main-header {
+  inline-size: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+  padding-inline: 1.1875rem 1.5rem;
+  padding-block: 1.25rem;
+
+  & .left-menu {
+    color: #ff5c00;
+
+    h2 {
+      margin: 0;
+      font-size: 1.5rem;
+      font-weight: 500;
+    }
+  }
+
+  & .right-menu {
+    display: flex;
+    align-items: center;
+    gap: 1.25rem;
+
+    a {
+      text-decoration: none;
+      background-color: #ff5c00;
+      color: #fff;
+      inline-size: 5.8125rem;
+      block-size: 2.125rem;
+      border-radius: 3.125rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1.0625rem;
+      font-size: 0.875rem;
+      font-weight: 500;
+    }
+
+    img {
+      display: block;
+    }
+  }
+}
+
+main {
+  .faq-wrapper {
+    inline-size: 100%;
+    block-size: 15.25rem;
+    text-align: center;
+    padding-block-start: 3.6875rem;
+  }
+  & h2 {
+    margin: 0;
+    color: #ff5c00;
+    font-size: 2.375rem;
+    font-weight: 900;
+  }
 }
 
 .accordion-container {
